# FS-Competition-Simulator

./: .gitignore  Acceleration.h  AccelerationEvent.cpp  AccelerationEvent.h  Autocross.h  AutocrossEvent.h  BuisenssPlan.h  BuisenssPlanEvent.h  BuisnessPlanEvent.cpp  BuisnessPlanEvent.h  CMakeLists.txt  Competition.cpp  Competition.h  CostAndManufacturing.h  CostAndManufacturingEvent.cpp  CostAndManufacturingEvent.h  Endurance.h  EnduranceEvent.h  EngeeneringDesign.h  EngeeneringDesignEvent.h  Event.cpp  Event.h  Event_tools.cpp  Event_tools.h  FileSaver.h  Informacje_dla_Adama.md  Informacje_dla_Adama.txt  Informacje_dla_Wojtka.txt  LapTime.h  Makefile  README.md  Skidpad.h  SkidpadEvent.cpp  SkidpadEvent.h  Team.cpp  Trackdrive.h  TrackdriveEvent.h  constans.h  constants.h  documentation.md  (+10 more)
Interface/: FileSaver.cpp  FileSaver.h
base_classes/: Competition.cpp  Competition.h  Event.cpp  Event.h  LapTime.cpp  LapTime.h  LapTimeParser.cpp  LapTimeParser.h  Team.cpp  Team.h
competitionsimulator/: dynamic_events_penalties.json  exceptions.h
compsim_classes/: CMakeLists.txt  Competition.cpp  Competition.h  DynamicEvent.cpp  DynamicEvent.h  Event.cpp  Event.h  EventSimulatorInterface.h  PointsCalculatorInterface.h  StaticEvent.cpp  StaticEvent.h  Team.cpp  Team.h  constants.h  dynamic_events_sims.cpp  dynamic_points_formulas.cpp  dynamic_points_formulas.h  event_base.h  event_tools.cpp  event_tools.h  exceptions.cpp  exceptions.h  static_events_sims.cpp  static_points_formulas.h
compsim_classes/EventSimulatorStandard/: EventSimulatorStandard.cpp  EventSimulatorStandard.h  dynamic_events_sims.cpp  preprocessing_standard.cpp
compsim_classes/PointsCalculatorFSG/: PointsCalculatorFSG.cpp  PointsCalculatorFSG.h  dynamic_points_formulas.cpp
compsim_enums/: CMakeLists.txt  EventType.def  EventsCategories.def  LapTimeMode.def  enums.cpp  enums.h
enums/: EventType.def  EventsCategories.def  enums.cpp  enums.h
events/: AccelerationEvent.cpp  AccelerationEvent.h  AutocrossEvent.cpp  AutocrossEvent.h  BuisnessPlanEvent.cpp  BuisnessPlanEvent.h  BusinessPlanEvent.cpp  BusinessPlanEvent.h  CMakeLists.txt  CostAndManufacturingEvent.cpp  CostAndManufacturingEvent.h  EnduranceEvent.cpp  EnduranceEvent.h  EngeeneringDesignEvent.cpp  EngeeneringDesignEvent.h  EngineeringDesignEvent.cpp  EngineeringDesignEvent.h  Event_tools.cpp  Event_tools.h  SkidpadEvent.cpp  SkidpadEvent.h  TrackdriveEnent.h  TrackdriveEvent.cpp  TrackdriveEvent.h  base_formulas.cpp  constants.h  events.h
ewentualne_enum_to_string/: events.def  events_categories.def  gówno.cpp
include/: Competition.h  EventSimulatorInterface.h  LapTimeParser.h  PointsCalculatorInterface.h  Team.h  enum_string_maps.h  enums.h  event_tools.h  exceptions.h  simulator_factory.h
interface/: CMakeLists.txt  FileSaver.cpp  FileSaver.h  constants.h  interface_tools.cpp  interface_tools.h  main.cpp  ui_tools.cpp  ui_tools.h
laptime_parser/: CMakeLists.txt  LapTimeParser.cpp  LapTimeParser.h  constants.h
lib/: CMakeLists.txt  Competition.cpp  EventSimulatorStandard.cpp  EventSimulatorStandard.h  LapTimeParser.cpp  PointsCalculatorFSG.cpp  PointsCalculatorFSG.h  PointsCalculatorFSN.h  Team.cpp  constants.h  dynamic_formulas_FSG.cpp  dynamic_formulas_FSN.cpp  dynamic_preprocessing.cpp  dynamic_sims.cpp  event_tools.cpp  exceptions.cpp  simulator_factory.cpp  static_formulas_FSG.cpp  static_preprocessing.cpp  static_sims.cpp
other_calculators/: RC_calculator.cpp  battery_pack.cpp  battery_pack.h  kinetic_equations.cpp  kinetic_equations.h  tools.cpp  tools.h
output_files/: simulations.txt
qt_interface/: CMakeLists.txt  CompetitionManager.cpp  CompetitionManager.h  ResultLineEditsWidget.cpp  ResultLineEditsWidget.h  ResultSettingWidget.cpp  ResultSettingWidget.h  ScoresShowingWidget.cpp  ScoresShowingWidget.h  TeamListItem.cpp  TeamListItem.h  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tools.cpp  tools.h
src/: CMakeLists.txt  CompetitionManager.h  ResultLineEditsWidget.cpp  ResultLineEditsWidget.h  ResultSettingWidget.cpp  ResultSettingWidget.h  ScoresShowingWidget.cpp  constants.h  mainwindow.cpp  mainwindow.ui  tools.cpp
tests/: CMakeLists.txt  test_acceleration.cpp  test_acceleration_DC.cpp  test_acceleration_DV.cpp  test_autocross.cpp  test_autocross_DC.cpp  test_businessplan.cpp  test_competition.cpp  test_cost_and_manufacturing.cpp  test_endurance.cpp  test_engineering_design.cpp  test_engineering_design_driverless.cpp  test_event_functionalities.cpp  test_laptimeparser.cpp  test_skidpad.cpp  test_skidpad_DC.cpp  test_skidpad_DV.cpp  test_trackdrive.cpp  tests.cpp  tests_constants.h
tests_backup/: tests_constants.h
text_files/: simulations.txt
